@@ -18,6 +18,7 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public interface OriginComponent extends AutoSyncedComponent {
 
@@ -78,12 +79,12 @@ public interface OriginComponent extends AutoSyncedComponent {
 					choseOneAutomatically = true;
 					shouldContinue = true;
 				} else if (layer.getOriginOptionCount(player) == 1 && layer.shouldAutoChoose()) {
-					List<Origin> origins = layer.getOrigins(player).stream().map(OriginRegistry::get).filter(Origin::isChoosable).toList();
-					if (origins.isEmpty()) {
+					List<Origin> origins = layer.getOrigins(player).stream().map(OriginRegistry::get).filter(Origin::isChoosable).collect(Collectors.toList());
+					if (origins.size() == 0) {
 						List<Identifier> randomOrigins = layer.getRandomOrigins(player);
 						setOrigin(layer, OriginRegistry.get(randomOrigins.get(player.getRandom().nextInt(randomOrigins.size()))));
 					} else {
-						setOrigin(layer, origins.getFirst());
+						setOrigin(layer, origins.get(0));
 					}
 					choseOneAutomatically = true;
 					shouldContinue = true;
